fixed ie11 design collapse

--- a/app/static_src/less/partials/header.less
+++ b/app/static_src/less/partials/header.less
@@ -669,9 +669,7 @@
 
 .topicSearchList-header-cancel-main {
     display: table-cell;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    vertical-align: middle;
 }
 
 #NavSearchIcon,#NavSearchIconToggle {
